rsvp-vault-vso/overlays/mount/patch-rsvp-web-deployment-vault-env-file.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rsvp-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rsvp-web
  template:
    metadata:
      labels:
        app: rsvp-web
    spec:
      serviceAccountName: vault-serviceaccount
      containers: 
      - name: rsvpd-web
        image: paichayon/rsvp:readsecret
        volumeMounts:
         - name: secret-volume
           mountPath: "/vault/secrets/"  # The directory where secrets will be mounted
           readOnly: true
        ports:
        - containerPort: 5000
          name: web-port  
      volumes:
        - name: secret-volume
          secret:
            secretName: kubesecret-mysecret
